--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,11 @@ body{
 #mycontainer{
     max-width: 1100px;
 }
+#separador_redes img{
+    border-left:1px solid white ;
+    border-right: 1px solid white;
+}
+
 #footer{
     background: #000;;
 }
@@ -50,6 +55,10 @@ body{
     font-family: var(--font2);
     font-size: 17px;
 }
+#redirecion-footer{
+    font-size: 10px;
+    color: darkgray!important;
+}
 #titulo{
     display: block;
     font-size: 15px;
@@ -64,3 +73,10 @@ body{
 #header{
     background-color: #050025
 }    
+
+
+@media (max-width: 768px){
+    #footer-mid{
+       border:none;
+    } 
+}
