--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,9 @@ body{
     border-left:1px solid white ;
     border-right: 1px solid white;
 }
+.dropdown-toggle::after{
+    content: none;
+}
 
 #footer{
     background: #000;;
@@ -96,4 +99,7 @@ body{
     #footer-mid{
        border:none;
     } 
+    .efecto_hover_subrayado::before{
+        content: none;
+    }
 }
