--- a/src/style.css
+++ b/src/style.css
@@ -9,10 +9,15 @@
 }
 body{
     height: 200vh;
-    padding-top: 56px;
+    padding-top: 60px;
+    background-color: #050025;
 }
-
-
+                    /* HEADER */
+#navbar{
+    background-color: #050025;
+    
+   
+}
 .navbar-brand img{
     height: 40px;
 }
@@ -26,7 +31,122 @@ body{
 .dropdown-toggle::after{
     content: none;
 }
+#header{
+    background-color: #050025
+}
+.efecto_hover_subrayado{
+    position: relative;
+}    
+.efecto_hover_subrayado::before{
+    content: "";
+    display: block;
+    height: 3px;
+    width: 0;
+    background: #0163AF;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transition:all .3s;
+}
+.efecto_hover_subrayado:hover::before{
+    width: 100%;
+    left: 0;
+}
+                      /* /HEADER */
 
+                      /* SLIDER */
+                     
+    .carousel-fade .carousel-item {
+    opacity: 0;
+    transition-duration: 1s;
+    transition-property: opacity;
+}
+
+.carousel-fade .carousel-item.active,
+.carousel-fade .carousel-item-next.carousel-item-left,
+.carousel-fade .carousel-item-prev.carousel-item-right {
+    opacity: 1;
+    transition: 0.6s opacity;
+
+}
+
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-right {
+    opacity: 0;
+}
+
+.carousel-fade .carousel-item-next,
+.carousel-fade .carousel-item-prev,
+.carousel-fade .carousel-item.active,
+.carousel-fade .active.carousel-item-left,
+.carousel-fade .active.carousel-item-prev {
+    transform: translateX(0);
+    transform: translate3d(0, 0, 0);
+}   
+#la-imagen{
+    height: 400px;
+}
+#slider-contenido{
+    color: white;
+    margin-top: 5%;
+}
+#slider-contenido > p{
+    font-family:var(--font2) ;
+    line-height: 25px;
+}
+#texto-slider{
+    font-size: 15px;
+    width: 90%;
+}
+#link-slider{
+    color: white;
+    text-decoration: none;
+    
+   
+}
+#link-slider::after{
+    content: url(./img/icon/flecha.svg);
+    padding-left: 10px;
+    position: relative;
+    bottom: -2px;
+
+}
+#link-slider:hover::after{
+    padding-left: 15px;
+    transition: ease-in-out .3s;
+}
+ /* BOTONES DE SLIDER */
+#anterior,#siguiente{
+    bottom: 0;
+    top: unset;
+}
+#anterior{
+right: 0;
+left: unset
+;
+}
+#siguiente{
+bottom: 40px;
+
+   
+}
+#imagen-siguiente{
+    background-image: url(./img/icon/direccion.png);
+    width: 40px;
+    height: 40px;
+}
+#imagen-anterior{
+    background-image: url(./img/icon/direccion.png);
+    transform: scaleX(-1);
+    width: 40px;
+    height: 40px;
+}
+/* /BOTONES DE SLIDER */
+                      /* /SLIDER */
+
+
+
+                      /* FOOTER */
 #footer{
     background: #000;;
 }
@@ -73,27 +193,8 @@ body{
 #contenido{
     font-size: 18px;
 }
-#header{
-    background-color: #050025
-}
-.efecto_hover_subrayado{
-    position: relative;
-}    
-.efecto_hover_subrayado::before{
-    content: "";
-    display: block;
-    height: 3px;
-    width: 0;
-    background: #0163AF;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transition:all .3s;
-}
-.efecto_hover_subrayado:hover::before{
-    width: 100%;
-    left: 0;
-}
+                           /* /FOOTER */
+
 
 @media (max-width: 768px){
     #footer-mid{
