--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
     font-family: var(--font1);
 }
 body{
-    height: 200vh;
+    min-height: 200vh;
     padding-top: 60px;
     background-color: #050025;
 }
@@ -251,6 +251,42 @@ bottom: 40px;
 }
 
                      /* /SERVICIOS SECTION */
+                     /* CONFIAN EN NOSOTROS SECTION */
+
+.confianza-section{
+    width: 100%;
+    min-height: 300px;
+    background: #050025;
+    margin-bottom: 5%;
+}
+.swiper-container {
+    width: 100%;
+    height: 200px;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    
+    cursor:pointer;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .swiper-slide> img{
+      width: 50%;
+  }
+                     /* /CONFIAN EN NOSOTROS SECTION */
 
 
                       /* FOOTER */
