--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@
     font-family: var(--font1);
 }
 body{
-    min-height: 200vh;
+    
     padding-top: 60px;
     background-color: #050025;
 }
@@ -287,6 +287,30 @@ bottom: 40px;
       width: 50%;
   }
                      /* /CONFIAN EN NOSOTROS SECTION */
+                     /* DETALLES SECTION */
+.details{
+    width: 100%;
+    min-height: 300px;
+    background-color: #06012D;
+    padding-bottom: 5%;
+}
+.details a{
+    text-decoration: none;
+}
+#tarjeta-detalles{
+    background: unset;
+    
+}
+#tarjeta-detalles>.card-head>img{
+    width: 35%;
+    height: 35%;
+}
+#tarjeta-detalles>.card-body p{
+    text-align: center;
+    font-size: .95rem;
+}
+                     
+                     /* /DETALLES SECTION */
 
 
                       /* FOOTER */
@@ -335,6 +359,9 @@ bottom: 40px;
 }
 #contenido{
     font-size: 18px;
+}
+#imagenes-redes{
+    height: 15px!important;
 }
 
                            /* /FOOTER */
